--- a/snippets/widget--roadmap.liquid
+++ b/snippets/widget--roadmap.liquid
@@ -3,12 +3,18 @@
   href="{{ shop.url }}/pages/roadmap"
   draggable="false">
   <div class="db-widget-box">
-    {% comment %} <h5>
-      ROADMAP
-    </h5> {% endcomment %}
-
-    <img src="{{ 'DB_Widget05_Roadmap-v01-1056x237.png' | asset_url }}" alt="">
-
+    {% comment %}
+      <h5>
+        ROADMAP
+      </h5>
+    {% endcomment %}
+    <img class="db-img"
+      alt=""
+      title=""
+      src="{{ 'DB_Widget05_Roadmap-v01-1056x237.png' | asset_url }}"
+      width=""
+      height=""
+      loading="lazy"/>
     <p>
       12 Month Roadmap Milestones
     </p>
