--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -8,7 +8,7 @@
 
     @media only screen and (max-width: 1080px) {
       height: auto;
-      padding: 0 20px 100px;
+      padding: 0 20px 30px;
     }
 
     .db-bg-wrap {
@@ -30,6 +30,19 @@
 
       @media only screen and (max-width: 480px) {
         height: 645px;
+      }
+
+      &::before {
+        @media only screen and (max-width: 768px) {
+          content: '';
+          position: absolute;
+          z-index: 2;
+          inset: 0;
+          display: block;
+          background-color: rgba(12, 7, 15, 0.60);
+          width: 100%;
+          height: 100%;
+        }
       }
 
       .db-bg-video {
@@ -240,7 +253,9 @@
                 height: 100%;
 
                 &:nth-of-type(1) {
+                  max-width: 656px;
                   width: 100%;
+                  margin: 0 auto;
 
                   .db-widget-container {
                     // scroll-behavior: smooth;
@@ -334,7 +349,7 @@
                         .db-widget-list {
                           width: 100%;
                           height: 100%;
-                          padding: 20px 10px;
+                          padding: 20px;
                           display: flex;
                           flex-direction: column;
                           row-gap: 24px;
