add console log

--- a/sections/page-about-us.liquid
+++ b/sections/page-about-us.liquid
@@ -549,10 +549,10 @@
     },
     methods: {
       startDrag(event) {
-        console.log(`Start Drag`)
+        console.log(`Start Drag`);
       },
       handleDrag(event) {
-        console.log(`Handle Drag`)
+        console.log(`Handle Drag`);
       },
       endDrag(event) {
         console.log(`End Drag`)
