--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -15,3 +15,4 @@
 @import './db-theme/page--home';
 @import './db-theme/page--about-us';
 @import './db-theme/page--roadmap';
+@import './db-theme/page--explore-oc';
