--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,7 +27,7 @@
     <!-- vue | JS -->
     <script type="text/javascript" src="{{ 'vue.js' | asset_url }}"></script>
 
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    {% comment %} <script src="https://sdk.scdn.co/spotify-player.js"></script> {% endcomment %}
 
   </head>
   <body class="db-scroll-bar">
